--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -92,6 +92,8 @@ jobs:
           POSTGRES_PORT: 5433
           POSTGRES_USER: data_user
           POSTGRES_PASSWORD: data_password
+          DATA_DB_NAME: data
+          USER_DB_NAME: users
         run: | 
           chmod +x backend/setup_databases.py
           python backend/setup_databases.py
