--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,4 @@
 markers =
     test_db: Test related to the test database
     data_db: Test related to the data database
+    user_creation: Test related to user creation
